syntax = "proto3";

package todo.v1;

option go_package = "todo-app/gen/proto/todo/v1;todov1";

import "google/protobuf/timestamp.proto";

service TodoService {
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse) {}
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse) {}
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {}
}

message Todo {
  uint32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
  bool completed = 3;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message UpdateTodoRequest {
  uint32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  uint32 id = 1;
}

message DeleteTodoResponse {
  bool success = 1;
} 